# Burma_Automaton

./: BITNET_SETUP_EXPLAINED.md  CMakeLists.txt  DISTRIBUTION_STATUS.md  PACKAGING.md  QUICKSTART.md  README.md  SNAP_BUILD_NOTES.md  UBUNTU_SOFTWARE_CENTER_UPLOAD.md  build-deb.sh  build-tarball.sh  build.sh  setup-all.sh  snapcraft.yaml
debian/: changelog  control  rules
include/core/: Application.h
include/modules/: BitNetClient.h  FuelFetcher.h  MaterialManager.h  RvizConverter.h  SDFBuilder.h
include/ui/: AssetBrowser.h  EventLog.h  ExportPanel.h  MainWindow.h  PromptPanel.h  PropertyEditor.h  RenderWidget.h
include/utils/: Logger.h
resources/: burma-automaton.desktop  resources.qrc
resources/icons/: placeholder.txt
src/: main.cpp
src/core/: Application.cpp
src/modules/: BitNetClient.cpp  FuelFetcher.cpp  MaterialManager.cpp  RvizConverter.cpp  SDFBuilder.cpp
src/ui/: AssetBrowser.cpp  EventLog.cpp  ExportPanel.cpp  MainWindow.cpp  PromptPanel.cpp  PropertyEditor.cpp  RenderWidget.cpp
src/utils/: Logger.cpp
